// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulkCreate should display error message when bulkCreate request fails 1`] = `
Array [
  <h2
    class="euiTitle emotion-euiTitle-m"
  >
    Load Kibana objects
  </h2>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiText emotion-euiText-m"
      >
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
        data-test-subj="loadSavedObjects"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Load Kibana objects
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />,
  <div
    class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
    data-test-subj="loadSavedObjects_failed"
  >
    <p
      class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
    >
      Request failed, Error: simulated bulkRequest error
    </p>
  </div>,
]
`;

exports[`bulkCreate should display success message when bulkCreate is successful 1`] = `
Array [
  <h2
    class="euiTitle emotion-euiTitle-m"
  >
    Load Kibana objects
  </h2>,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiText emotion-euiText-m"
      >
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
        data-test-subj="loadSavedObjects"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Load Kibana objects
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />,
  <div
    class="euiPanel euiPanel--success euiPanel--paddingMedium euiCallOut euiCallOut--success emotion-euiPanel-none-m-success-euiCallOut"
    data-test-subj="loadSavedObjects_success"
  >
    <p
      class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-success"
    >
      1 saved objects successfully added
    </p>
  </div>,
]
`;

exports[`renders 1`] = `
<Fragment>
  <EuiTitle
    size="m"
  >
    <h2>
      Load Kibana objects
    </h2>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="center"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem>
      <EuiText>
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="loadSavedObjects"
        isLoading={false}
        onClick={[Function]}
      >
        Load Kibana objects
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;
